--- a/src/Core.Ioc/Core.Ioc.csproj
+++ b/src/Core.Ioc/Core.Ioc.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.0.0-preview2.22368.68" />
   </ItemGroup>
 
   <ItemGroup>
